2008-07-05  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.4 ===

2008-06-18  Matthias Clasen  <mclasen@redhat.com>

	* io-ico.c: Add image/x-win-bitmap to the supported mimetypes,
	since that is what shared-mime-info uses for .cur

2008-06-13  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.3 ===

2008-06-13  Hans Breuer  <hans@breuer.org>

	* makefile.msc : updated to allow simple switch between gdiplus- and
	former fileformat backends
	* io-tiff.c : use g_snprintf

2008-06-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 531960 – crash in eog-image.c:1154: (priv->image != NULL)

	* io-ico.c: Check headers more thorougly.
	Patch by Felix Riemann

2008-06-03  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.2 ===

2008-06-02  Behdad Esfahbod  <behdad@gnome.org>

	* Makefile.am: Add gdk-pixbuf-features.h to BUILT_SOURCES.

2008-05-29  Matthias Clasen <mclasen@redhat.com>

	* io-jasper.c:
	* io-ico.c:
	* io-icns.c: Use the correct INCLUDE_ macros.

2008-05-29  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.13.1 ===

2008-05-29  Matthias Clasen  <mclasen@redhat.com>

	Bug 535453 - gdk_pixbuf_format_get_license returns NULL for 
	any of the loaders

	* queryloaders.c (write_loader_info): Add the license info
	after the description.

	* gdk-pixbuf-io.c (gdk_pixbuf_io_init): Read the license info
	from the module file. Reported by Andrey Tsyvarev.

2008-05-28  Michael Natterer  <mitch@imendio.com>

	* gdk-pixbuf.h: define GDK_PIXBUF_H_INSIDE around including all
	other headers.

	* gdk-pixbuf-animation.h
	* gdk-pixbuf-core.h
	* gdk-pixbuf-enum-types.h.template
	* gdk-pixbuf-features.h.in
	* gdk-pixbuf-io.h
	* gdk-pixbuf-loader.h
	* gdk-pixbuf-simple-anim.h
	* gdk-pixbuf-transform.h: add single-include guards that #error
	out if GDK_PIXBUF_DISABLE_SINGLE_INCLUDES is defined and any of
	these files is included individually.

	* gdk-pixbuf-private.h: don't incude "gdk-pixbuf-io.h".
