@@ -1,3 +1,8 @@
+2008-07-11  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk-pixbuf-io.c: Use GIO for sniffing image types, except
+	on Win32, where GIO doesn't do any sniffing.
+
 2008-07-05  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.13.4 ===
